[package]
name = "ircv3"
description = "IRCv3-aware parsing library for Rust, with reference IRC client implementation."
version = "0.0.1"
authors = ["Fionn Kelleher <fionn@sigkell.xyz>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sigkell/ircv3-rs"
keywords = ["irc", "parsing", "ircv3", "communication", "chat"]
categories = ["parser-implementations"]
readme = "README.md"

[badges]
travis-ci = { repository = "...", branch = "master" }